# contexter

./: Makefile  README.md  config.json  pyproject.toml
src/contexter/: __init__.py  __main__.py
src/contexter/cli/: Cli.py
src/contexter/cli/groups/: _entry.py  template.py
src/contexter/manager/: config.py  workspace.py
src/contexter/utils/configs/: configHandler.py
