[project]
name = "contexter"
version = "0.1.0"
description = "LLM Context and Memory Manager with RAG & MCP"
readme = "README.md"
authors = [
    { name = "toolexi", email = "jayachandra.s.reddy@gmail.com" },
    { name = "ExI", email = "executableintelligence@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chonkie>=1.5.5",
    "fastapi>=0.128.8",
    "langchain>=1.2.10",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "pageindex>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cx = "contexter.cli.Cli:cx"

[tool.hatch.build.targets.wheel]
packages = ["src/contexter"]