[project]
name = "contexter"
version = "0.1.0"
description = "LLM Context and Memory Manager with RAG & MCP"
readme = "README.md"
authors = [
    { name = "toolexi", email = "jayachandra.s.reddy@gmail.com" },
    { name = "ExI", email = "executableintelligence@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chonkie>=1.5.5",
    "daggr>=0.7.0",
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "pageindex>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cx = "contexter.cli.Cli:cx"

[tool.hatch.build.targets.wheel]
packages = ["src/contexter"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.1",
]


[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]


[tool.black]
exclude = '\.git|\.ruff_cache|\.venv|\.vscode|__pypackages__|build|dist|.venv'